fixed search result list z-index, now it's 2 and looks better

--- a/resources/sass/components/_search.scss
+++ b/resources/sass/components/_search.scss
@@ -42,6 +42,8 @@
         left: 0;
         top: 26px;
 
+        z-index: 2;
+
         // width: 430px;
         width: 450px;
         padding: 10px;
